Fix layout issues

--- a/src/site/_includes/sass/_cards.scss
+++ b/src/site/_includes/sass/_cards.scss
@@ -48,16 +48,14 @@ $card-offset: 2%;
 	background-color: rgba(238, 238, 238);
 
 	color: var(--card-text-color, black);
+
 	background-color: var(--card-background-color, rgba(238, 238, 238, 0.8));
-	box-shadow: 0 0 2px var(--card-shadow-color);
 	text-shadow: 0 0 0.5em var(--card-background-color);
 	border-radius: var(--card-border-radius, 0);
 
 	@supports (-webkit-backdrop-filter: blur(2px)) {
-		@media screen and (min-width: 992px) {
-			border-radius: 0;
+		@media screen and (max-width: 991px) {
 			background-color: transparent;
-			filter: none;
 
 			&::after {
 				content: "";
@@ -69,8 +67,6 @@ $card-offset: 2%;
 				z-index: 1;
 
 				background-color: var(--card-background-color);
-				border-radius: var(--card-border-radius);
-				box-shadow: 0 0 2px 1px var(--card-shadow-color);
 				-webkit-backdrop-filter: blur(2px);
 				backdrop-filter: blur(2px);
 			}
